--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -23,37 +23,44 @@
     text-decoration: none;
 }
 
-main, header, nav, .nav-list {
+nav, .nav-list {
     display: flex;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
     background-color: #262626;
     width: 100vw;
-    height: 100vh;
-    display: flex;
+    min-height: 100vh;
     overflow-x: hidden;
     position: relative;
-    align-items: stretch;
 }
+
 
 aside#borda-lateral {
     box-shadow: 1px 0 5px rgba(255, 255, 255, 0.459),
                 2px 0 5px black,
                 3px 0 10px black;
     border-radius: 15px;
-    height: 942px;
+    height: 100vh;
     width: 25%;
     min-width: 300px;
     flex: 0 1 auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: stretch;
+    justify-content: space-evenly;
+    align-items: center;
     gap: 50px;
     padding: 40px;
     background-color: #303030;
     z-index: 2;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    /* animation: slideAside 1s ease forwards; */
 }
 
 .perfil-container {
@@ -205,6 +212,7 @@ ul#contatos {
 .contato-icon {
     fill: white;
     cursor: pointer;
+    transition: all .4s ease-in-out;
 }
 
 .contato-items {
@@ -212,6 +220,8 @@ ul#contatos {
     justify-content: center;
     align-items: center;
     gap: 30px;
+    transform: translateX(-200%);
+    animation: showContatos 1.5s ease-in forwards;
 }
 
 .contato-items a {
@@ -228,7 +238,7 @@ ul#contatos {
 }
 
 #container-img {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -236,7 +246,7 @@ ul#contatos {
     background: hsla(0, 0%, 0%, 0.7);
     z-index: 2;
     width: 100%;
-    height: 942px;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -271,6 +281,42 @@ ul#contatos {
     }
 }
 
+@keyframes slideAside {
+
+    from {
+        left: -100%;
+    }
+
+    to {
+        left: 0;
+    }
+
+}
+
+@keyframes esconder {
+
+    from {
+        left: 0;
+    }
+
+    to {
+        left: -100%;
+    }
+
+}
+
+@keyframes showContatos{
+
+    from {
+        transform: translateX(-200%);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+
+}
+
 
 @media screen and (max-width: 1350px) {
     
@@ -299,34 +345,32 @@ ul#contatos {
 
 /* fim do aside, inicio do main */
 
-
-main {
-    height: 942px;
-    width: 75%;
-    flex-direction: column;
-}
-
 header {
-    justify-content: center;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    margin-left: -5px;
-    padding: 15px;
+    left: 0;
+    right: 0;
+    top: 0;
     box-shadow: 0 2px 10px #00000080,
                 0 1px 10px #00000080;
     background-color: #303030;
+    position: fixed;
+    z-index: 1;
+    padding: 15px 80px;
 }
 
-nav {
-    width: 100%;
+.menu {
+    min-width: 32px;
+    min-height: 32px;
+    cursor: pointer;
 }
 
 .nav-list {
-    width: 100%;
-
-    gap: 40px;
+    gap: 100px;
     font-size: 1.3rem;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .list-items .btn {
@@ -379,12 +423,15 @@ nav {
     background-color: rgba(110, 110, 110, 0.28);
 }
 
-.conteudo-sobre, .conteudo-projetos {
+.conteudo-sobre {
     max-width: 100%;
-    max-height: 100%;
-    height: 100%;
-    overflow-y: auto;
-    padding: 50px;
+    min-height: 100vh;
+    padding: 200px 100px 100px 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    animation: showContatos 1s ease forwards;
 }
 
 .conteudo-sobre p, .conteudo-titulo, .cursos {
@@ -405,7 +452,6 @@ nav {
     padding-bottom: 50px;
     font-size: 4rem;
     color: #984ad0;
-    text-shadow: 1px 1px 2px white;
 }
 
 .primeira-letra {
@@ -419,12 +465,16 @@ nav {
     text-indent: 0;
     font-size: 2rem;
     color: #984ad0;
-    text-shadow: 1px 1px 1px white;
     letter-spacing: 5px;
 }
 
-.conteudo-projetos {
-    display: none;
+footer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 50px;
+    background-color: black;
 }
 
 
