--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -273,53 +273,15 @@ ul#contatos {
     z-index: 3;
 }
 
-@keyframes flutuacao {
-    from {
-        transform: scale(1);
-    }
-
-    to {
-        transform: scale(1.01, 1.01);
-    }
+.lateral-direito-icon {
+    display: none;
 }
 
-@keyframes slideAside {
-
-    from {
-        left: -100%;
-    }
-
-    to {
-        left: 0;
-    }
-
+.close-lateral-direito {
+    display: none;
 }
 
-@keyframes esconder {
-
-    from {
-        left: 0;
-    }
-
-    to {
-        left: -100%;
-    }
-
-}
-
-@keyframes showContatos{
-
-    from {
-        transform: translateX(-200%);
-    }
-
-    to {
-        transform: translateX(0);
-    }
-
-}
-
-/* fim do aside, inicio do main */
+/* ----------------------------------- fim do aside, inicio do header e section ----------------------------------- */
 
 header {
     display: flex;
@@ -488,7 +450,7 @@ footer {
 
     li#sumir {
         display: none;
-    }
+    }    
 
     .nav-list {
         gap: 30px;
@@ -512,16 +474,17 @@ footer {
     }
 
     header {
-        padding: 10px 30px;
+        padding: 15px 30px;
+        justify-content: space-between;
     }
 
     .nav-list {
         flex-direction: column;
-        display: none;
+        /* display: none; */
         background-color: #303030;
         border-radius: 15px 0 0 15px;
-        padding: 40px;
-        gap: 30px;
+        padding: 50px;
+        gap: 10px;
         justify-content: space-evenly;
         align-items: center;
         height: 100%;
@@ -530,13 +493,101 @@ footer {
         3px 0 10px black;
     }
 
+    .close-lateral-direito {
+        position: absolute;
+        top: 0;
+        margin: 20px 0 0 0;
+        display: block;
+    }
+
     nav {
         position: absolute;
         top: 0;
-        right: 0;
+        right: -100%;
         height: 500px;
+        /* animation: showBordaDireita 1s ease forwards; */
+    }
+
+    .lateral-direito-icon {
+        display: block;
+    }
+
+    .menu {
+        min-width: 26px;
+        min-height: 26px;
     }
 
 }
 
+/* ---------------------------------KEY FRAMES ---------------------------------------*/
+
+@keyframes flutuacao {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.01, 1.01);
+    }
+}
+
+@keyframes slideAside {
+
+    from {
+        left: -100%;
+    }
+
+    to {
+        left: 0;
+    }
+
+}
+
+@keyframes esconder {
+
+    from {
+        left: 0;
+    }
+
+    to {
+        left: -100%;
+    }
+
+}
+
+@keyframes showContatos{
+
+    from {
+        transform: translateX(-200%);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+
+}
+
+@keyframes showBordaDireita {
+    
+    from {
+        right: -100%;
+    }
+
+    to {
+        right: 0;
+    }
+
+}
+
+@keyframes esconderBordaDireita {
+    
+    from {
+        right: 0;
+    }
+
+    to {
+        right: -100%;
+    }
+
+}
 
