--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -480,31 +480,32 @@ footer {
 
     .nav-list {
         flex-direction: column;
-        /* display: none; */
-        background-color: #303030;
-        border-radius: 15px 0 0 15px;
-        padding: 50px;
-        gap: 10px;
-        justify-content: space-evenly;
+        padding: 40px 0;
+        gap: 50px;
+        justify-content: end;
         align-items: center;
-        height: 100%;
-        box-shadow: 1px 0 5px rgba(255, 255, 255, 0.459),
-        2px 0 5px black,
-        3px 0 10px black;
+        height: 100%;  
+        width: 100%;    
     }
 
     .close-lateral-direito {
         position: absolute;
         top: 0;
-        margin: 20px 0 0 0;
+        margin: 30px 0 0 0;
         display: block;
     }
 
     nav {
+        box-shadow: 0 2px 10px #00000080,
+                0 1px 10px #00000080;
+        background-color: #303030;
+        border-radius: 0 0 15px 15px;
         position: absolute;
+        transform: translateY(-150%);
         top: 0;
-        right: -100%;
-        height: 500px;
+        left: 0;
+        right: 0;
+        height: 400px;
         /* animation: showBordaDireita 1s ease forwards; */
     }
 
@@ -570,11 +571,11 @@ footer {
 @keyframes showBordaDireita {
     
     from {
-        right: -100%;
+        transform: translateY(-150%);
     }
 
     to {
-        right: 0;
+        transform: translateY(0);
     }
 
 }
@@ -582,11 +583,11 @@ footer {
 @keyframes esconderBordaDireita {
     
     from {
-        right: 0;
+        transform: translateY(0);
     }
 
     to {
-        right: -100%;
+        transform: translateY(-150%);
     }
 
 }
